<resources>
    <string name="app_name">4PDA</string>
    <string name="bar_menu">Меню страницы</string>
    <string name="bar_panel">Меню</string>
    <string name="bar_search">Поиск</string>
    <string name="bar_up">Вверх</string>
    <string name="comment_header_btn">ДОБАВИТЬ</string>
    <string name="devtype_main_actual">Актуальные:</string>
    <string name="devtype_main_all">Всего:</string>
    <string name="devtype_main_show_all">ПОКАЗАТЬ ВСЕ</string>
    <string name="dlg_about_copyright">© 2005–2020, «4PDA».</string>
    <string name="dlg_about_date">Дата сборки: 01.01.1970</string>
    <string name="dlg_about_libs"><a href="https://github.com/aigilea/PicoImg/">PicoImg</a>" © aigilea
"<a href="https://www.acra.ch/">ACRA</a>" © Kevin Gaudin
"<a href="http://www.kolobok.us/">Kolobok smiles</a> © Aiwan</string>
    <string name="dlg_about_libs_title">Библиотеки:</string>
    <string name="dlg_about_version">Версия приложения:</string>
    <string name="dlg_edit_email_caption">Изменение e-mail</string>
    <string name="dlg_edit_email_curr">Текущий e-mail:</string>
    <string name="dlg_edit_email_label">Новый e-mail</string>
    <string name="dlg_edit_email_pass_label">Пароль</string>
    <string name="dlg_edit_login_caption">Изменение логина</string>
    <string name="dlg_edit_login_curr">Текущий логин:</string>
    <string name="dlg_edit_login_label">Новый логин</string>
    <string name="dlg_edit_login_pass_label">Пароль</string>
    <string name="dlg_edit_pass_caption">Новый пароль</string>
    <string name="dlg_edit_pass_curr_hint">текущий пароль</string>
    <string name="dlg_edit_pass_new2_hint">повторите пароль</string>
    <string name="dlg_edit_pass_new_hint">новый пароль</string>
    <string name="dlg_fav_sort_key_date">дате</string>
    <string name="dlg_fav_sort_key_label">Сортировать по</string>
    <string name="dlg_fav_sort_key_name">имени</string>
    <string name="dlg_fav_sort_reverse">В обратном порядке</string>
    <string name="dlg_fav_sort_title">Сортировка</string>
    <string name="dlg_fav_sort_unread_first">Сначала непрочитанные</string>
    <string name="dlg_forgot_pass_caption">Сброс пароля</string>
    <string name="dlg_forgot_pass_hint">логин или e-mail</string>
    <string name="dlg_forgot_pass_label">"Введите ваш логин или e-mail
(логин не чувствителен к регистру).
 
После заполнения формы на вашу почту будет отправлено письмо с инструкцией по восстановлению пароля."</string>
    <string name="dlg_foruminfo_forums">Подфорумов:</string>
    <string name="dlg_foruminfo_mods">Модераторы:</string>
    <string name="dlg_foruminfo_posts">Постов:</string>
    <string name="dlg_foruminfo_topics">Топиков:</string>
    <string name="dlg_join_author_label">Итоговый автор</string>
    <string name="dlg_join_date_label">Итоговая дата</string>
    <string name="dlg_join_title">Объединение</string>
    <string name="dlg_new_talk_caption">Создание диалога</string>
    <string name="dlg_new_talk_msg">Сообщение</string>
    <string name="dlg_new_talk_opponent">Собеседник</string>
    <string name="dlg_new_talk_topic">Тема диалога</string>
    <string name="dlg_reputation_down">ПОНИЗИТЬ</string>
    <string name="dlg_reputation_label">Укажите причину:</string>
    <string name="dlg_reputation_title">Изменение репутации</string>
    <string name="dlg_reputation_up">ПОДНЯТЬ</string>
    <string name="dlg_search_forum_all">везде</string>
    <string name="dlg_search_forum_label">Искать на форуме</string>
    <string name="dlg_search_forum_posts">только в сообщениях</string>
    <string name="dlg_search_forum_titles">только в заголовках</string>
    <string name="dlg_search_member">Ник автора</string>
    <string name="dlg_search_sort_date_down">по убыванию даты</string>
    <string name="dlg_search_sort_date_up">по возрастанию даты</string>
    <string name="dlg_search_sort_label">Сортировка</string>
    <string name="dlg_search_sort_rev">по соответствию</string>
    <string name="dlg_search_term">Поисковая фраза</string>
    <string name="dlg_search_themes">Результат в виде тем</string>
    <string name="dlg_search_title">Поиск</string>
    <string name="dlg_search_where_all">везде</string>
    <string name="dlg_search_where_forum">на форуме</string>
    <string name="dlg_search_where_label">Искать</string>
    <string name="dlg_search_where_page">на странице</string>
    <string name="dlg_search_where_site">на сайте</string>
    <string name="dlg_search_where_the_forum">в</string>
    <string name="dlg_search_where_topic">в теме</string>
    <string name="dlg_simple_comment_warning">"Важно!
Мы напоминаем вам о необходимости уважать собеседников.
Любые проявления хамства и неуважения к другим людям, их мнению, устройству или операционной системе наказываются переводом вашего аккаунта в режим только чтение на срок от 3 до 7 суток и автоматическому снижению кармы до отрицательных значений"</string>
    <string name="dlg_topic_edit_add_answer">+ ответ</string>
    <string name="dlg_topic_edit_add_question">+ вопрос</string>
    <string name="dlg_topic_edit_caption">Заголовок темы</string>
    <string name="dlg_topic_edit_desc">Описание темы</string>
    <string name="dlg_topic_edit_poll">Включить опрос</string>
    <string name="dlg_topic_edit_poll_header">Заголовок опроса</string>
    <string name="dlg_topic_edit_poll_questions">Опрос</string>
    <string name="dlg_topic_edit_title">Редактирование темы</string>
    <string name="dlg_topicinfo_author">Автор:</string>
    <string name="dlg_topicinfo_cur">Куратор:</string>
    <string name="dlg_topicinfo_data">Дата создания:</string>
    <string name="dlg_topicinfo_status">Статус:</string>
    <string name="dlg_warn_ban_label">Бан</string>
    <string name="dlg_warn_delete">Удалить пост</string>
    <string name="dlg_warn_level_label">Уровень</string>
    <string name="dlg_warn_message_label">Сообщение</string>
    <string name="dlg_warn_other_label">Прочее</string>
    <string name="dlg_warn_premod_always">всегда</string>
    <string name="dlg_warn_premod_label">Пред. проверка</string>
    <string name="dlg_warn_reason_label">Причина</string>
    <string name="dlg_warn_ro_label">Только чтение</string>
    <string name="dlg_warn_template_label">Шаблон</string>
    <string name="dlg_warn_title">Наказание</string>
    <string name="load_default">Загрузка</string>
    <string name="menu_item_cmd">item_cmd</string>
    <string name="menu_item_id">item_id</string>
    <string name="menu_item_type">item_type</string>
    <string name="nav_ava">Аватарка пользователя</string>
    <string name="nav_exit">Выход из приложения</string>
    <string name="nav_new_fav">Избранное</string>
    <string name="nav_new_forum">Форум</string>
    <string name="nav_new_home">Домашняя</string>
    <string name="nav_new_men">Упоминания</string>
    <string name="nav_new_qms">QMS</string>
    <string name="nav_new_site">Сайт</string>
    <string name="nav_night">Ночной режим</string>
    <string name="nav_open_tabs">Открытые вкладки</string>
    <string name="nav_user">Имя пользователя</string>
    <string name="nav_user_group">Группа пользователя</string>
    <string name="not_used">Only here to ensure that android-maven-plugin:4.4.3 creates an R.txt</string>
    <string name="option_AnimImages">Анимировать изображения</string>
    <string name="option_AnimImages_avas">Аватары</string>
    <string name="option_AnimImages_emos">Смайлики</string>
    <string name="option_AnimImages_pics">Изображения</string>
    <string name="option_AnimImages_sub">Настройки воспроизведения анимации на страницах.</string>
    <string name="option_Back">Ускоренный \"Назад\"</string>
    <string name="option_Back_sub">Пропускать переходы между страницами одной темы, форума, избранного или сайта при нажатии \"Назад\".</string>
    <string name="option_BackgroundMode">Фоновая проверка событий</string>
    <string name="option_BackgroundMode_fcm">PUSH (Google)</string>
    <string name="option_BackgroundMode_frequently">часто</string>
    <string name="option_BackgroundMode_hcm">PUSH (Huawei, альфа)</string>
    <string name="option_BackgroundMode_off">никогда</string>
    <string name="option_BackgroundMode_progressively">нормально</string>
    <string name="option_BackgroundMode_seldom">редко</string>
    <string name="option_BackgroundMode_sub">Выбор варианта частоты проверки событий в свернутом состоянии.</string>
    <string name="option_BackgroundMode_xmpush">PUSH (Xiaomi, альфа)</string>
    <string name="option_CacheClear">ОЧИСТИТЬ КЭШ</string>
    <string name="option_CacheSize">Размер кэша изображений</string>
    <string name="option_CacheSize_sub">Ограничение объема закэшированных файлов изображений в мегабайтах.</string>
    <string name="option_Chooser">Выбор загрузчика</string>
    <string name="option_Chooser_sub">Предлагать выбор приложения для загрузки вложений.</string>
    <string name="option_Confirm">Подтверждение действий</string>
    <string name="option_Confirm_sub">Запрашивать подтверждение важных действий (удаление постов, тем и т.д.).</string>
    <string name="option_Extended">Расширенные настройки</string>
    <string name="option_Extended_sub">Отображение полного списка настроек.</string>
    <string name="option_FavNotify">Уведомлять об избранном</string>
    <string name="option_FavNotify_all">включено</string>
    <string name="option_FavNotify_important">только важные</string>
    <string name="option_FavNotify_off">выключено</string>
    <string name="option_FavNotify_sub">Добавлять уведомления об избранном в шторку.</string>
    <string name="option_GroupNotify">Общее уведомление</string>
    <string name="option_GroupNotify_sub">Группировать уведомления избранного и QMS в одно.</string>
    <string name="option_LoadImages">Загружать изображения</string>
    <string name="option_LoadImages_sub">В отключенном состоянии остается возможность загружать изображения через контекстное меню поста/статьи.</string>
    <string name="option_MenNotify">Уведомлять об упоминаниях</string>
    <string name="option_MenNotify_sub">Добавлять уведомления об упоминании ваших постов в шторку.</string>
    <string name="option_Night_Off">Выключен</string>
    <string name="option_Night_On">Включен</string>
    <string name="option_Night_System">Как в системе</string>
    <string name="option_Night_Title">Ночной режим</string>
    <string name="option_Night_Unavail">Недоступен в выбранном скине</string>
    <string name="option_NotificationSound">Рингтон уведомлений</string>
    <string name="option_NotificationSound_default">по-умолчанию</string>
    <string name="option_NotificationSound_none">нет</string>
    <string name="option_NotificationSound_select">перейти</string>
    <string name="option_NotificationVirbation">Вибрация</string>
    <string name="option_NotificationVirbation_sub">Использовать вибрацию при уведомлениях.</string>
    <string name="option_PageRefresh">Обновление страниц</string>
    <string name="option_PageRefresh_auto">автоматически</string>
    <string name="option_PageRefresh_button">пункт обновить</string>
    <string name="option_PageRefresh_sub">Настройка вариантов обновления страниц.</string>
    <string name="option_PageRefresh_swipe_bottom">свайп снизу</string>
    <string name="option_PageRefresh_swipe_top">свайп сверху</string>
    <string name="option_PerPageServer">ЗНАЧЕНИЕ С САЙТА</string>
    <string name="page_login_enter">Войти</string>
    <string name="page_login_enter_free">Без логина</string>
    <string name="page_login_forgot">Забыли пароль?</string>
    <string name="page_login_hide">Скрытый вход</string>
    <string name="page_login_login">логин</string>
    <string name="page_login_pass">пароль</string>
    <string name="page_login_reg">Регистрация</string>
    <string name="page_login_title">Вход</string>
    <string name="page_reg_email">e-mail</string>
    <string name="page_reg_pass_pass">повторите пароль</string>
    <string name="page_reg_title">Регистрация</string>
</resources>