<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="24.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pda="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textSize="22.0sp"
        android:textStyle="bold"
        android:textColor="@color/main_text"
        android:paddingBottom="20.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlg_topic_edit_title" />
    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlg_topic_edit_caption" />
    <EditText
        android:textColor="@color/main_text"
        android:id="@id/dlg_topic_title"
        android:background="@drawable/edit_text_material"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />
    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/main_text"
        android:paddingTop="16.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlg_topic_edit_desc" />
    <EditText
        android:textColor="@color/main_text"
        android:id="@id/dlg_topic_description"
        android:background="@drawable/edit_text_material"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />
    <view
        android:textSize="18.0sp"
        android:textColor="@color/main_text"
        android:gravity="center_vertical"
        android:id="@id/dlg_topic_poll"
        android:background="@drawable/checkbox_right"
        android:paddingTop="8.0dip"
        android:paddingBottom="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/dlg_topic_edit_poll"
        android:includeFontPadding="false"
        pda:box_align="right"
        class="ru.fourpda.client.Widgets$CheckboxTextView" />
    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/main_text"
        android:id="@id/dlg_topic_poll_header_caption"
        android:paddingTop="8.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlg_topic_edit_poll_header" />
    <EditText
        android:textColor="@color/main_text"
        android:id="@id/dlg_topic_poll_header"
        android:background="@drawable/edit_text_material"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />
    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/main_text"
        android:id="@id/dlg_topic_poll_questions_caption"
        android:paddingTop="16.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlg_topic_edit_poll_questions" />
    <LinearLayout
        android:orientation="vertical"
        android:id="@id/dlg_topic_poll_questions"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</LinearLayout>