<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="24.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="22.0sp"
            android:textStyle="bold"
            android:textColor="@color/main_text"
            android:paddingBottom="20.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_edit_email_caption" />
        <TextView
            android:textSize="16.0sp"
            android:textColor="@color/link_color"
            android:id="@id/edit_email_current"
            android:paddingBottom="16.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_edit_email_curr" />
        <EditText
            android:textSize="22.0sp"
            android:textColor="@color/main_text"
            android:gravity="center"
            android:id="@id/edit_email_new"
            android:background="@drawable/edit_text_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:hint="@string/dlg_edit_email_label"
            android:singleLine="true"
            android:includeFontPadding="false"
            android:inputType="text">
            <requestFocus />
        </EditText>
        <EditText
            android:textSize="22.0sp"
            android:textColor="@color/main_text"
            android:gravity="center"
            android:id="@id/edit_email_pass"
            android:background="@drawable/edit_text_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dlg_edit_email_pass_label"
            android:singleLine="true"
            android:includeFontPadding="false"
            android:inputType="textPassword" />
    </LinearLayout>
</ScrollView>